--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 	</section>
 
     <footer>
-        <p>Website: www.johndoe.com</p>
+        <p><a href="https://srikanta100.github.io/Chandrayee_biodata/">https://srikanta100.github.io/Chandrayee_biodata/</a></p>
     </footer>
 
 </body>
