--- a/index.html
+++ b/index.html
@@ -99,10 +99,10 @@
 		 <h2>Personal Details</h2>
 		<center>
 		<table width="100%">	
-				<td height="25px" class="color"><b>Name:</b></td><td>Chandrayee Chakraborty</td>
+				<td height="25px" class="color"><b>Name:</b></td><td>Chandrayee&nbsp;Chakraborty</td>
 			</tr>
 			<tr>	
-				<td height="25px" class="color"><b>Birth Date:</b></td><td>17/04/203</td>
+				<td height="25px" class="color"><b>Birth Date:</b></td><td>17/04/2003</td>
 			</tr>
 			<tr>
 				<td height="25px" class="color"><b>Birth Place:</b></td><td> Kolkata</td>
@@ -127,7 +127,10 @@
 			</tr>
 			<tr>	
 				<td height="25px" class="color"><b>Devak/Gotra:</b></td><td> Bhardwaj</td>
-			</tr>	
+			</tr>
+			<tr>	
+				<td height="25px" class="color"><b>Nakshatra:</b></td><td> Swathi Nakshatra</td>
+			</tr>
 			<tr>	
 				<td height="25px" class="color"><b>Complexion:</b></td><td> Fair</td>
 			</tr>
